--- a/MultimediaServer/app/src/main/res/layout/activity_movie.xml
+++ b/MultimediaServer/app/src/main/res/layout/activity_movie.xml
@@ -4,7 +4,6 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_gravity="center"
-    android:background="#333333"
     android:orientation="vertical"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
@@ -25,5 +24,26 @@
         android:padding="10dp"
         android:layout_margin="10dp"
         android:layout_gravity="center" />
+
+    <Space
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@android:color/black"/>
+
+    <TextView
+        android:id="@+id/moviePath"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:text="Movie path"
+        android:paddingTop = "15dp"/>
+
+    <TextView
+        android:id="@+id/movieDes"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:text="Movie description"
+        android:paddingTop = "15dp"/>
 
 </LinearLayout>
