--- a/MultimediaServer/app/src/main/res/layout/image_view.xml
+++ b/MultimediaServer/app/src/main/res/layout/image_view.xml
@@ -25,11 +25,11 @@
             android:layout_weight="1"/>
 
         <RatingBar
-            android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:id="@+id/ratingBar"
             android:layout_weight="1"
-            android:minHeight="57dp" />
+            android:minHeight="57dp"
+            android:layout_width="300dp" />
 
     </LinearLayout>
 
